--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,5 +21,7 @@ jobs:
         run: npm run build
       - name: test
         run: npm run test
+      - name: Install Playwright Browser
+        run: npx playwright install
       - name: e2e test
         run: npm run test:e2e
