--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,8 @@ jobs:
       - name: test
         run: npm run test
       - name: Install Playwright Browser
-        run: npx playwright install
+        run: |
+          sudo npx playwright install-deps && \
+          npx playwright install && 
       - name: e2e test
         run: npm run test:e2e
