--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -31,8 +31,8 @@ jobs:
       - name: e2e test
         run: npm run test:e2e
       - name: Deploy
-        # Only run this step if the branch is main
-        if: github.ref == 'refs/heads/main'
+        # Run this step only if the branch is main and the event is a push
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
