--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run test:e2e
       - name: Deploy
         # Run this step only if the branch is main and the event is a push
-        if: ${{ env.CONDITION == 'true' }}
+        if: ${{ env.CONDITION == true }}
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
@@ -46,8 +46,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
-        if: ${{ env.CONDITION == 'true' && contains(join(github.event.commits.*.message, '\n'), '#skip') == 'false' }}
+        if: ${{ env.CONDITION == true && contains(join(github.event.commits.*.message, '\n'), '#skip') == false }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DEFAULT_BUMP: patch
+          DEFAULT_BUMP: 'patch'
