--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm run test:e2e
       - name: Deploy
         # Run this step only if the branch is main and the event is a push
-        if: ${{ env.CONDITION == true }}
+        if: ${{ env.CONDITION == 'true' }}
         env:
           deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
         run: |
@@ -46,18 +46,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
-        if: ${{ env.CONDITION == true && contains(join(toJson(github.event.commits.*.message), '\n'), '#skip') == false }}
+        if: ${{ env.CONDITION == 'true' && contains(join(toJson(github.event.commits.*.message), '\n'), '#skip') == 'false' }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DEFAULT_BUMP: patch
   notification:
-    needs: [tag_release]
+    needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
+    if: always()
     steps:
       - uses: actions/checkout@v4
       - name: Notify Success
-        if: ${{ needs.simple_deployment_pipeline.result == 'success' }}
+        if: success()
         uses: rjstone/discord-webhook-notify@v1.0.4
         with:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
@@ -65,7 +66,7 @@ jobs:
           text: "A new version of Pokedex deployed"
           description: to ${{ secrets.RENDER_DEPLOYED_URL }}
       - name: Notify Failure
-        if: ${{ needs.simple_deployment_pipeline.result == 'failure' }}
+        if: failure()
         uses: rjstone/discord-webhook-notify@v1.0.4
         with:
           webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
