--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,7 +46,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Bump version and push tag
-        if: ${{ env.CONDITION == 'true' && contains(join(toJson(github.event.commits.*.message), '\n'), '#skip') == 'false' }}
+        if: ${{ env.CONDITION == 'true' && contains(join(github.event.commits.*.message, '\n'), '#skip') == 'false' }}
         uses: anothrNick/github-tag-action@1.71.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
